Committed my changes, including adding the Maple passthrough functionality

--- a/Makefile.cfg
+++ b/Makefile.cfg
@@ -8,8 +8,8 @@ HOSTCFLAGS	= -O2
 # the ones in your system
 
 # these must point to your sh-elf bfd, not the system one
-BFDLIB		= -L/usr/local/dcdev/lib -lbfd -liberty
-BFDINCLUDE	= /usr/local/dcdev/include
+BFDLIB		= -L/usr/lib64/binutils/sh-elf/2.20.1 -lbfd -liberty
+BFDINCLUDE	= /usr/lib64/binutils/sh-elf/2.20.1/include
 
 # cygwin
 # these must point to your sh-elf bfd, not the system one
@@ -23,12 +23,12 @@ TARGETOBJCOPY	= sh-elf-objcopy
 TARGETLD	= sh-elf-ld
 
 # the ip of your dreamcast - set to 0.0.0.0 if you want to use arp on pc
-DREAMCAST_IP	= 000.000.000.000
-#DREAMCAST_IP	= 192.168.0.4
+#DREAMCAST_IP	= 000.000.000.000
+DREAMCAST_IP	= 192.168.1.253
 #DREAMCAST_IP	= 10.0.0.32
 
 # dir to install dc-tool in
-TOOLINSTALLDIR	= /usr/local/dcdev/bin
+TOOLINSTALLDIR	= /home/tim/dc
 #TOOLINSTALLDIR = /usr/local/dc/bin
 
 # uncomment this for cygwin
