--- a/make-cd/Makefile
+++ b/make-cd/Makefile
@@ -1,5 +1,5 @@
-CDRECORD	= cdrecord dev=0,0,0 speed=8
-SCRAMBLE	= scramble
+CDRECORD	= cdrecord dev=1000,0,0 speed=8
+SCRAMBLE	= ./scramble
 DD		= dd
 CP		= cp
 MKISOFS		= mkisofs
@@ -16,23 +16,23 @@ burn-audio: audio.raw
 	$(CDRECORD) -multi -audio audio.raw
 	touch burn-audio
 
-1st_read.bin: $(1ST_READ)
-	$(SCRAMBLE) $(1ST_READ) 1st_read.bin
+1ST_READ.BIN: $(1ST_READ)
+	$(SCRAMBLE) $(1ST_READ) 1ST_READ.BIN
 
 data.raw: tmp.iso IP.BIN
 	( cat IP.BIN ; dd if=tmp.iso bs=2048 skip=16 ) > data.raw
 
-tmp.iso: 1st_read.bin burn-audio
-	$(MKISOFS) -C `$(CDRECORD) -msinfo` -o tmp.iso 1st_read.bin
+tmp.iso: 1ST_READ.BIN burn-audio
+	$(MKISOFS) -C `$(CDRECORD) -msinfo` -o tmp.iso 1ST_READ.BIN
 
 burn-data: data.raw
-	$(CDRECORD) -xa1 data.raw
+	$(CDRECORD) -xa data.raw
 	rm -f audio.raw data.raw burn-audio
 
 .PHONY : clean
 clean:
-	rm -f tmp.iso burn-audio 1st_read.bin
+	rm -f tmp.iso burn-audio 1ST_READ.BIN
 
 .PHONY : distclean
 distclean: clean
-	rm -f audio.raw data.raw
+	rm -f audio.raw data.raw 1ST_READ.BIN
